# EmuCast

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
emucast/: __init__.py  forecast_emulator.py
emucast/data/: __init__.py  da_prices_fr.xlsx  load_uk_norm.xlsx  pv_uk_norm.xlsx
emucast/notebooks/: da_market.ipynb  dev_test.ipynb  ems_rolling.ipynb
emucast/utils/: __init__.py  check_ts.py  error_fcts.py  morph_fcts.py
