[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emucast"
version = "0.1.0"
description = "Emulator for time series forecasting"
authors = [{ name="Rémy Rigo-Mariani", email="remy.rigo-mariani@grenoble-inp.fr" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
            "pandas",
            "numpy",
            "matplotlib",
            "seaborn",
            "setuptools",
            "tqdm",
            "openpyxl",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["figures*"]

[tool.setuptools.package-data]
emucast = [
    "data/*",
    "notebooks/*"
]